fix: Services text align fix.

--- a/style.css
+++ b/style.css
@@ -1963,5 +1963,5 @@ q:after {
 }
 
 .service-box p {
-	text-align: justify;
+	text-align: start;
 }
